Fix for #1035