@@ -25,7 +25,6 @@
 package com.oracle.svm.core.jdk;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.SecureRandom;
 
 import com.oracle.svm.core.annotate.Alias;
@@ -38,7 +37,7 @@ final class Target_java_nio_file_TempFileHelper {
     @Alias @InjectAccessors(TempFileHelperRandomAccessors.class)//
     static SecureRandom random;
 
-    @Alias @InjectAccessors(TempFileHelperDir.class)//
+    @Alias @InjectAccessors(TempFileHelperDir.class)
     static Path tmpdir;
 
     static final class TempFileHelperRandomAccessors {
@@ -57,7 +56,7 @@ final class Target_java_nio_file_TempFileHelper {
 
         static Path get() {
             if (dir == null) {
-                dir = Paths.get(System.getProperty("java.io.tmpdir"));
+                dir = Path.of(System.getProperty("java.io.tmpdir"));
             }
             return dir;
         }
